<resources>
    <string name="app_name">Sanabel Al-Khayr</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="user_and_password_required">user name and password must not be empty!</string>
    <string name="hint_name">full user name</string>
    <string name="register">Register user</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_address">Address</string>

    <string name="user_type">user type</string>
    <string name="main_user">Main User</string>
    <string name="donor">Donor</string>
    <string name="volunteer">Volunteer</string>

    <string name="phone_missing_message">please enter your phone number!</string>
    <string name="password_missing_message">please enter your password!</string>
    <string name="name_missing_message">please enter your full name !</string>
    <string name="user_name_missing_message">Please enter your user name!</string>
    <string name="address_missing_message">please enter your address !</string>
    <string name="type_missing_message">please select your account type!</string>
    <string name="send_report">Send Problem Report</string>
    <string name="hint_problem_report_title">Title</string>
    <string name="hint_details">Details</string>
    <string name="send">Send</string>
    <string name="update">Update</string>
    <string name="logout">logout</string>
    <string name="profile_name">full  name</string>
    <string name="profile_mobile">phone number</string>
    <string name="profile_address">address</string>
    <string name="profile_username">user name</string>
    <string name="donation_title">donation title</string>
    <string name="donation_description">description</string>
    <string name="order_date">28-1-2022</string>
    <string name="donationOrder">Order</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_donations">Donations</string>
    <string name="menu_report_problem">Send Problem Report</string>
    <string name="menu_share">Share</string>
    <string name="service_title">service title</string>
    <string name="service_description">service description</string>
    <string name="service_region">service region</string>
    <string name="volunteer_region">volunteer region</string>
    <string name="availability">availability</string>
    <string name="cancel">Cancel</string>
    <string name="confirmation_dialog">Confirmation Dialog</string>
    <string name="are_you_sure_you_want_to_order">Are you sure you want to donationOrder this item ?</string>
    <string name="my_orders">My donationOrders</string>
    <string name="charitable_events">Charitable Events</string>

    <string name="status_new">NEW</string>
    <string name="status_rejected">REJECTED</string>
    <string name="status_accepted">ACCEPTED</string>
    <string name="status_completed">COMPLETED</string>
    <string name="show_message">Show message</string>
    <string name="ok">Ok</string>
    <string name="order_status_message">"Donation Order Status is : "</string>
    <string name="message">Message : </string>

    <string name="start_at">start at</string>
    <string name="end_at">end at</string>

    <string name="orders_list">Orders List</string>
    <string name="my_donations">My Donations</string>
    <string name="my_services">My Services</string>
    <string name="account">Account</string>
    <string name="search_volunteer">Search For Volunteer</string>
    <string name="volunteer_name">Volunteer Name</string>
    <string name="are_you_sure_you_want_to_order_service">Are you sure you want to donationOrder this service?</string>
    <string name="search_service">Search for Service</string>
    <string name="choose">Choose</string>
    <string name="my_donation_orders">Donation Orders</string>
    <string name="my_service_orders">Service Orders</string>
    <string name="voluntary_services">Voluntary Services</string>
    <string name="choose_donation_to_deliver">Choose donation to Deliver :</string>
    <string name="order_this_donation">Order this donation</string>
    <string name="search_donation">Search for donations</string>
    <string name="save_donation">Save donation</string>
    <string name="categories">Categories</string>
    <string name="regions">Regions</string>
    <string name="quantity">Quantity</string>
    <string name="category">Category</string>
    <string name="region">Region</string>
    <string name="missing_fields_message">All fields are required</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="Reason">Reason</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="service_requests">Service Requests</string>
    <string name="delete">Delete</string>
    <string name="add_service">Add Service</string>
    <string name="save_service">Save Service</string>
    <string name="users_list">Users List</string>
    <string name="events_list">Events List</string>
    <string name="add_event">Add Event</string>
    <string name="user_details">User Details</string>
    <string name="problem_reports">Problem reports</string>
    <string name="delete_account">Delete account</string>
    <string name="post_event">Post Event</string>
    <string name="hint_start_date">Start date</string>
    <string name="hint_end_date">End date</string>
    <string name="event_description">Event Description</string>
    <string name="response">Response</string>
    <string name="update_profile">Update Profile</string>
    <string name="please_add_quantity">Please add quantity</string>
    <string name="please_choose_quantity">Please enter number minimum or equal to quantity</string>
    <string name="leave_empty">Leave this field empty if you dont want to change password</string>
    <string name="waiting">waiting</string>
    <string name="interested_in">interested in</string>

    <string name="add_event_error">Error add event please try again later</string>
    <string name="report_success">Send report Successfully</string>
    <string name="get_categories_error">Error loading categories</string>
    <string name="get_categories_success">Categories loaded successfully</string>
    <string name="get_my_dnotion_success">dontaions loaded successfully</string>
    <string name="get_regions_success">regions loaded successfully</string>
    <string name="orders">Orders</string>
    <string name="user_id">User ID</string>
    <string name="confirmation_delete">Confirm delete</string>
    <string name="are_you_sure_you_want_to_delete_user">Are you sure you want  to delete this user ?</string>
    <string name="needy">Needy</string>
    <string name="save_area">Save area</string>
    <string name="save_category">Save Category</string>
    <string name="hint_area">Area</string>
    <string name="hint_category">Category</string>
    <string name="add_new_info">Add new info</string>
    <string name="add_donation">Add donation</string>
    <string name="donation_details">Donation Details</string>
    <string name="are_you_sure_you_want_to_delete_event">Are you sure you want  to delete this event ?</string>
    <string name="error_get_info">loading information Error</string>
    <string name="are_you_sure_you_want_to_delete_service">Are you sure you want  to delete this service ?</string>
    <string name="cert_title">"Volunteering Certificate</string>
    <string name="cert_to">We provide this certificate for</string>
    <string name="cert_text">as an expression of thanks for his useful volunteer work for the community</string>
    <string name="generate_cert">Generate certeficate</string>
    <string name="permission_denied">Permission denied</string>
    <string name="get_my_services_success">Services loaded successfully</string>
    <string name="get_orders_success">Get orders successfully</string>
    <string name="service_ordered">Service Ordered successfully</string>
    <string name="service_status_changed">Service status changed successfully</string>
    <string name="error_code">Code is not correct</string>
    <string name="correct_code">Code is correct</string>
    <string name="enter_the_code_sent_to_your_email">Enter the code sent to your email</string>
    <string name="hint_code">Code</string>
    <string name="verify_email">Verify email</string>
    <string name="hint_email">Email</string>
    <string name="email_missing_message">Please enter your email</string>
    <string name="profile_email">Email</string>
    <string name="are_you_sure_you_want_to_delete_donation">Are you sure you want  to delete this donation ?</string>

</resources>