<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_my_services"
        android:icon="@drawable/ic_service_black"
        android:title="@string/my_services"
        android:actionLayout="@layout/fragment_orders" />
    <item
        android:id="@+id/menu_my_orders"
        android:icon="@drawable/ic_orders"
        android:title="@string/orders_list"
        android:actionLayout="@layout/fragment_orders"/>

    <item
        android:id="@+id/menu_charitable_events"
        android:icon="@drawable/ic_event"
        android:title="@string/charitable_events"
        android:actionLayout="@layout/fragment_orders" />
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/menu_share"
                android:icon="@drawable/ic_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/menu_report_problem"
                android:icon="@drawable/ic_report"
                android:title="@string/menu_report_problem" />
        </menu>
    </item>
</menu>