<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_volunteer"
    app:startDestination="@id/menu_my_services">

    <fragment
        android:id="@+id/menu_my_services"
        android:name="com.example.sanabelalkhayr.fragments.volunteer.MyServicesFragment"
        android:label="@string/my_services"
        tools:layout="@layout/fragment_my_services" >
        <action
            android:id="@+id/action_myServicesFragment_to_addServiceFragment"
            app:destination="@id/addServiceFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/menu_my_services"/>

    </fragment>

    <fragment
        android:id="@+id/addServiceFragment"
        android:name="com.example.sanabelalkhayr.fragments.volunteer.AddServiceFragment"
        android:label="@string/add_service"
        tools:layout="@layout/fragment_add_service" />
    <fragment
        android:id="@+id/menu_service_requests"
        android:name="com.example.sanabelalkhayr.fragments.volunteer.ServiceRequestsFragment"
        android:label="@string/service_requests"
        tools:layout="@layout/fragment_service_requests" />
    <fragment
        android:id="@+id/menu_charitable_events"
        android:name="com.example.sanabelalkhayr.fragments.CharitableEventsFragment"
        android:label="@string/charitable_events"
        tools:layout="@layout/fragment_charitable_events"/>
    <fragment
        android:id="@+id/menu_report_problem"
        android:name="com.example.sanabelalkhayr.fragments.SendProblemReportFragment"
        android:label="@string/send_report"
        tools:layout="@layout/fragment_send_problem_report" />
    <fragment
        android:id="@+id/menu_profile"
        android:name="com.example.sanabelalkhayr.fragments.user.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_user_profile">
        <action
            android:id="@+id/action_profileTOUpdateProfileFragment"
            app:destination="@id/UpdateProfileFragment"
            app:popUpTo="@id/menu_profile"/>
    </fragment>
    <fragment
        android:id="@+id/UpdateProfileFragment"
        android:name="com.example.sanabelalkhayr.fragments.user.UpdateProfileFragment"
        android:label="@string/update_profile"
        tools:layout="@layout/fragment_update_profile" />

</navigation>