<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_admin"
    app:startDestination="@id/menu_users">

    <fragment
        android:id="@+id/menu_users"
        android:name="com.example.sanabelalkhayr.fragments.admin.UsersListFragment"
        android:label="@string/users_list"
        tools:layout="@layout/fragment_users_list">
        <action
            android:id="@+id/action_UsersListFragment_to_UserDetailsFragment"
            app:destination="@id/userDetailsFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/menu_users"/>
    </fragment>
    <fragment
        android:id="@+id/userDetailsFragment"
        android:name="com.example.sanabelalkhayr.fragments.admin.UserDetailsFragment"
        android:label="@string/user_details"
        tools:layout="@layout/fragment_user_details" />

    <fragment
        android:id="@+id/menu_events"
        android:name="com.example.sanabelalkhayr.fragments.admin.EventsListFragment"
        android:label="@string/events_list"
        tools:layout="@layout/fragment_events_list">
        <action
            android:id="@+id/action_EventsListFragment_to_AddEventFragment"
            app:destination="@id/AddEventFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/menu_events"/>
    </fragment>

    <fragment
        android:id="@+id/AddEventFragment"
        android:name="com.example.sanabelalkhayr.fragments.admin.AddEventFragment"
        android:label="@string/add_event"
        tools:layout="@layout/fragment_user_details" />
    <fragment
        android:id="@+id/menu_reports"
        android:name="com.example.sanabelalkhayr.fragments.admin.ProblemReports"
        android:label="fragment_problem_reports"
        tools:layout="@layout/fragment_problem_reports" />

</navigation>