<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".volunteer.fragments.GenerateCertActivity"
    android:background="@drawable/bg_cert"
    android:id="@+id/cert_layout"
    android:layoutDirection="ltr"

    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/bg_cert"

        >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cert_title"
            android:textSize="26sp"
            android:layout_margin="30dp"
            android:textStyle="bold"
            android:fontFamily="monospace"
            />


              <TextView
            android:id="@+id/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cert_to"
            android:textSize="22sp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:layout_below="@id/title"
            android:layout_alignStart="@id/title"
            android:fontFamily="monospace"
            android:layout_marginBottom="30dp"
                  />
        <TextView
            android:id="@+id/cert_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            android:textSize="22sp"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:layout_below="@id/title"
            android:layout_toEndOf="@id/to"
            android:fontFamily="sans-serif"

            />
        <TextView
            android:id="@+id/expression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cert_text"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_alignStart="@id/to"
            android:layout_below="@id/to"
            android:fontFamily="monospace"
            android:lineHeight="50dp"
            />

        <ImageView
            android:id="@+id/cert_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="23dp"
            />

    </RelativeLayout>


</RelativeLayout>