<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_item_donation"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layoutDirection="ltr"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_toStartOf="@id/status"
        android:layout_alignParentStart="true"
        android:background="@drawable/bg_item_donation">

        <ImageView
            android:id="@+id/image"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@drawable/ic_request"
            android:background="@drawable/bg_item_donation"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_weight="3"
            >
            <TextView
                android:id="@+id/donation_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:text="@string/donation_title"

                />
            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_weight="2"
                android:layout_marginBottom="5dp"
                android:text="@string/hint_user_name"
                android:ellipsize="end"
                />
            <TextView
                android:id="@+id/request_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_weight="2"
                android:layout_marginBottom="5dp"
                android:text="@string/order_date"
                />
        </LinearLayout>
    </LinearLayout>



    <TextView
        android:id="@+id/status"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="accepted"
        android:padding="4dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:gravity="center"
        android:textAlignment="center"
        android:background="@drawable/bg_item_quantity"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        />

    <Button
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textStyle="bold"
        android:textSize="12sp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/accept"
        android:textColor="@color/white"
        android:background="@drawable/bg_img_order"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/reject"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textStyle="bold"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/reject"
        android:background="@drawable/bg_img_order"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/accept"
        android:layout_marginBottom="10dp"
        />


</RelativeLayout>