<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_user_card"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/image"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@drawable/ic_volunteer"
            android:background="@color/secondary"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@id/image"
            android:padding="8dp"
            android:layout_weight="4"
            >

            <TextView
                android:id="@+id/user_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_marginBottom="2dp"
                android:text="@string/profile_name"
                android:textColor="@color/black"

                />
            <TextView
                android:id="@+id/availability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"
                android:layout_marginBottom="2dp"
                android:text="@string/availability"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"
                android:layout_marginBottom="2dp"
                android:text="@string/profile_mobile"
                android:textColor="@color/black"

                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_region"
                    />
                <TextView
                    android:id="@+id/region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/volunteer_region"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>